--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "tailwindcss": "^3.4.16",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.17.0",
-    "vite": "^6.0.3"
+    "vite": "^6.0.3",
+    "vite-plugin-svgr": "^4.3.0"
   },
   "lint-staged": {
     "*.css": [
